--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>salesforcemulesoft</artifactId>
+	<artifactId>salesforcemulesoftJenkins</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
-
-	<name>salesforcemulesoft</name>
+	<name>salesforcemulesoftJenkins</name>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,10 +21,25 @@
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
+				<version>3.1.6</version>
 				<extensions>true</extensions>
 				<configuration>
+					<deploymentType>cloudhub</deploymentType>
+					<muleVersion>4.1.4</muleVersion>
+					<username>sravan143</username>
+					<password>Surya1234</password>
+					<redeploy>true</redeploy>
+					<environment>Sandbox</environment>
 				</configuration>
+				<executions>
+					<execution>
+						<id>deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
