--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>4.1.5</muleVersion>
-						<username>sravan143</username>
-						<password>Surya123</password>
+						<username></username>
+						<password></password>
 						<applicationName>salesforcemulesoftJenkinsApp</applicationName>
 						<environment>Sandbox</environment>
 						<workerType>MICRO</workerType>
